# AgentMesh

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_proxy.py
deployment/docker/: Dockerfile.demo-tools  Dockerfile.tessera  docker-compose.yml  entrypoint-tessera.py
deployment/docker/config/agentgateway/: config.yaml
deployment/docker/config/otel/: collector.yaml
deployment/docker/config/spire/: agent.conf  register-entries.sh  server.conf
deployment/docker/config/spire-agent/: agent.conf
deployment/docker/config/tessera/: policy.yaml
docs/: ARCHITECTURE.md  OPERATOR_GUIDE.md  RUST_PRIMITIVES.md
examples/: demo_agent.py  demo_tools_server.py
specs/: AGENTMESH_V1_SPEC.md
src/agentmesh/: __init__.py  client.py  evaluate.py  exports.py  identity.py  proxy.py  transport.py
src/agentmesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/agentmesh/adapters/: __init__.py  tessera_rs.py
src/agentmesh/sdk/: __init__.py  agentdojo.py  claude_code.py  coding_agent.py  copilot.py  crewai.py  cursor.py  gemini.py  generic.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  nemo.py  openai_agents.py  pydantic_ai.py
tests/: test_audit_log.py  test_coding_agent.py  test_coding_hooks.py  test_destructive.py  test_evaluator.py  test_guardrail_breaker.py  test_policy_builder.py  test_policy_builder_llm.py  test_proxy.py  test_real_langchain.py  test_redact_before_judge.py  test_replay.py  test_sdk.py  test_sensitivity.py  test_session_isolation.py  test_ssrf.py  test_supply_chain.py  test_tessera_rs_adapter.py  test_tier2_tier3.py  test_tier_ab.py  test_url_rules.py
