[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh"
version = "0.1.0"
description = "Agent security mesh composing Tessera, agentgateway, and SPIRE."
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "tessera-mesh>=0.3.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
guardrail = [
    "anthropic>=0.30",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
agentmesh = "agentmesh.proxy:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
