[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh-mesh"
version = "0.10.0"
description = "Agent security mesh: 27-endpoint proxy + 12 framework SDKs + coding-agent hooks, composing 54 Tessera modules with SPIRE, agentgateway, and OpenTelemetry."
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
authors = [{ name = "Kenith Philip" }]
dependencies = [
    # v0.10.0 picks up the v1.0 ProvenanceLabel binding via the
    # RustProvenanceLabelAdapter auto-swap. Older tessera-mesh
    # releases (>=0.7.1) still work, but the label adapter then
    # falls back to the Python implementation.
    "tessera-mesh>=1.0.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/kenithphilip/AgentMesh"
Repository = "https://github.com/kenithphilip/AgentMesh"

[project.optional-dependencies]
guardrail = [
    "anthropic>=0.30",
]
langchain = [
    "langchain-core>=0.2",
]
openai-agents = [
    "openai-agents>=0.0.3",
]
dev = [
    "pytest>=8",
    # Required by tests/test_sdk.py::TestNeMoAdapter::test_check_*
    # which use @pytest.mark.asyncio. Without this, those two
    # tests have failed every CI run since v0.7.0 (documented as
    # an environmental flake in v0.7.0 / v0.7.1 release notes).
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
agentmesh = "agentmesh.proxy:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
